# SeeQ-Programming-Model

./: pyproject.toml
data/: shape1.ttl
src/notebooks/: demo.ipynb
src/seeq/: CQ_Specification.py  SeeQ.py
